--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
@@ -54,11 +54,11 @@
                     <!-- BEGIN STUDENT INFO TEMPLATE -->
                     <section class="student-info">
                         <h2>Your Name</h2>
-                        <p><b>GitHub username:</b> <a href="https://github.com/yourusername">yourusername</a></p>
+                        <p><b>GitHub username:</b> <a href="https://github.com/JasonK">JasonK</a></p>
                         <p><b>Hobbies:</b>
                             <ul>
-                                <li>Racquetball</li>
-                                <li>Collecting spores, molds, and fungus</li>
+                                <li>Music</li>
+                                <li>Archery, Board </li>
                             </ul>
                         </p>
                     </section>
