--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <!-- BEGIN STUDENT INFO TEMPLATE -->
                     <section class="student-info">
                         <h2>Your Name</h2>
-                        <p><b>GitHub username:</b> <a href="https://github.com/JasonK">JasonK</a></p>
+                        <p><b>GitHub username:</b> <a href="https://github.com/Jason">Jason</a></p>
                         <p><b>Hobbies:</b>
                             <ul>
                                 <li>Music</li>
